# src/main/java/com/bank/customer/model/response/TransactionResponse.java
@@ -1,0 +1,25 @@
+package com.bank.customer.model.response;
+
+import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.springframework.format.annotation.DateTimeFormat;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class TransactionResponse {
+  private String id;
+  private String transactionType;
+  private Double amount;
+  private String description;
+
+  @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
+  private OffsetDateTime transactionDate;
+
+  private String accountId;
+  private String creditId;
+  private String customerId;
+}
